--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
+.env
+.env.*
+!.env.example
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
