--- a/docker/environments/dev/php/Dockerfile
+++ b/docker/environments/dev/php/Dockerfile
@@ -17,7 +17,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/portfolio
 
-COPY ../scripts/entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY ./php/scripts/entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 EXPOSE 9000
