--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
