--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-react": "^2.27",
         "symfony/ux-turbo": "^2.27",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
