--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.11",
+        "postcss": "^8.5.6",
+        "postcss-loader": "^8.1.1",
         "react": "^18.0",
-        "react-dom": "^18.0"
+        "react-dom": "^18.0",
+        "tailwindcss": "^4.1.11"
     }
 }
