--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-react": "^2.27",
         "symfony/ux-turbo": "^2.27",
+        "symfony/ux-twig-component": "^2.27",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.2",
