--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,8 @@
 twig:
     file_name_pattern: '*.twig'
+    paths:
+        '%kernel.project_dir%/templates/partials': partials
+        '%kernel.project_dir%/templates/main_page': main
 
 when@test:
     twig:
