--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/ux-react": "^2.27",
         "symfony/ux-turbo": "^2.27",
         "symfony/ux-twig-component": "^2.27",
+        "symfony/ux-typed": "^2.29",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.2",
