--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@symfony/stimulus-bridge": "^4.0.1",
         "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+        "@symfony/ux-typed": "file:vendor/symfony/ux-typed/assets",
         "@symfony/webpack-encore": "^5.0.0",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
@@ -20,6 +21,7 @@
         "sass-loader": "^16.0.5",
         "tailwindcss": "^4.1.11",
         "ts-loader": "^9.5.2",
+        "typed.js": "^2.0",
         "typescript": "^5.8.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^5.1.0"
