[REFACTOR|UI] Refactor SVG icon imports and add CTA/pill themes

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,7 @@ twig:
     paths:
         '%kernel.project_dir%/templates/partials': partials
         '%kernel.project_dir%/templates/main_page': main
+        '%kernel.project_dir%/assets/icons': icons
 
 when@test:
     twig:
