[SETUP|UX] Install Symfony UX Icon

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/string": "7.3.*",
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-icons": "^2.29",
         "symfony/ux-react": "^2.27",
         "symfony/ux-turbo": "^2.27",
         "symfony/ux-twig-component": "^2.27",
