[I18N|UPDATE] Use Symfony translation for text elements

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,12 +1,13 @@
-# see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
+    default_locale: fr
 
-    # Note that the session will be started ONLY if you read or write from it.
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+        fallbacks:
+            - fr
+
     session: true
-
-    #esi: true
-    #fragments: true
 
 when@test:
     framework:
