[SETUP|DOCKER] Add PostgreSQL container service

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ phpstan.neon
 /.phpcs-cache
 /phpcs.xml
 ###< squizlabs/php_codesniffer ###
+
+###> postgresql ###
+postgresql_data
+###< postgresql ###
+
