--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.mail_from: '%env(MAIL_FROM)%'
+    app.admin_mail_to: '%env(ADMIN_MAIL_TO)%'
 
 services:
     # default configuration for services in *this* file
@@ -20,3 +22,9 @@ services:
     # please note that last definitions always *replace* previous ones
 
     Detection\MobileDetect: ~
+
+    App\Service\EmailNotificationService:
+        arguments:
+            $mailer: '@Symfony\Component\Mailer\MailerInterface'
+            $twig: '@Twig\Environment'
+            $parameterBag: '@Symfony\Component\DependencyInjection\ParameterBag\ParameterBagInterface'
